--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     var PronoteAutoBanNotifyWindow;
     var PronoteNotifyWindow;
     var PronoteWindow;
-    var EtabPrefix;
+    var EtabPrefix = "";
     var corsActivated = false;
     let stopAutomatedModeTrigger;
     // Other priority stuff
