--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@ textarea {
     z-index: 0; /* Ensure it's on top of hide-content */
 }
 
+p {
+  font: white;
+  font-family: 'Courier New', Courier, monospace;
+}
   </style>
   <script>
     // Define variables
