--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ p {
             });
         }, 5000);
       } else {
-        alert("Please enable the CORS support switch first.");
+        alert("Please enable the CORS support toggle first.");
         throw new Error("CORS support isn't enabled");
       }
     }
